# Kyra-AI-Assistant

./: README.md  README_CLIBOOT.md  assistant.py  capabilities.json  config.json  config.py  config.yaml  config.yaml.example  install_requirements.bat  install_to_cmd.bat  install_to_system.bat  kyra_full_installer_and_fixes.txt  kyra_setup_instructions.txt  logger.py  nova_assistant.py  playsound.py  requirements.txt  setup.cfg  setup.py  start.bat  start_kyra_text.bat  start_kyra_voice.bat  tools.py  transcript_console.py  tts.py  uninstall_from_cmd.bat  uninstall_kyra.bat  wake_word_engine.py
.github/workflows/: ci.yml
app/: assistant.py  config.py  constants.py  intent_router.py  scenarios.py  tts.py
assistant/: __init__.py  actions.py  commands.yml  console.py  filler_words.txt  main.py  nlu.py  requirements.txt  router.py  stt.py  tools.py  tts.py
core/: config.py  dispatcher.py  intent_router.py  tools.py  transcript.py  tts.py  utils.py
kyra/: cli.py  local_llm.py  main.py
tests/: conftest.py  intents.csv  test_actions.py  test_aurora.py  test_dispatcher.py  test_install_cmd.py  test_intent.py  test_kill_process.py  test_match_tool.py  test_nlu.py  test_play_music.py  test_router.py  test_router_summary.py  test_router_tools.py  test_sanitize.py  test_speak.py  test_speak_edge.py  test_tools.py  test_tts.py
