[metadata]
name = kyra-assistant
version = 0.0.0

[options]
packages = find:
install_requires =
    vosk
    requests
    pydantic
    edge-tts
    simpleaudio
    miniaudio
    rapidfuzz
    jsonschema
python_requires = >=3.10

[options.entry_points]
console_scripts =
    Kyra = app.assistant:main
